welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:37: error: Unmatched closing brace '}' ignored here
}
^